--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h3 style="font-family:Arial; font-weight:bold; font-size:x-large; text-align:center;color:white">Zadania</h3>
     </h2>
     <p style="text-align:center;color:white">
-      <a href="strony/Brzechwa/Brzechwa.html" target="_blank">Brzechwa</a>
+      <a href="link" target="_blank">Brzechwa</a>
   </p>
   <p style="text-align:center;color:white">
-    <a href="link" target="_blank">Budowa</a>
+    <a href="budowa/index.html" target="_blank">Budowa</a>
 </p>
   </body>
 </html>
