--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h3 style="font-family:Arial; font-weight:bold; font-size:x-large; text-align:center;color:white">Zadania</h3>
     </h2>
     <p style="text-align:center;color:white">
-      <a href="link" target="_blank">Brzechwa</a>
+      <a href="strony/Brzechwa.html" target="_blank">Brzechwa</a>
+      <a hred="
   </p>
   <p style="text-align:center;color:white">
     <a href="budowa/index.html" target="_blank">Budowa</a>
