--- a/index.html
+++ b/index.html
@@ -17,5 +17,17 @@
   <p style="text-align:center;color:white">
     <a href="budowa/index.html" target="_blank">Budowa</a>
 </p>
+          <p style="text-align:center;color:white">
+      <a href="zadanie1.html" target="_blank">Zadanie 1</a>
+	  </p>
+	  <p style="text-align:center;color:white">
+      <a href="divy/zadanie1.html" target="_blank">Zadanie 2</a>
+	  </p>
+	   <p style="text-align:center;color:white">
+      <a href="divy/zadanie1.html" target="_blank">Zadanie 3</a>
+	  </p>
+	  <p style="text-align:center;color:white">
+      <a href="divy/java_script1.html	" target="_blank">Zadanie 4</a>
+	  </p>
   </body>
 </html>
