--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
 	  <p style="text-align:center;color:white">
       <a href="divy/java_script1.html	" target="_blank">Zadanie 4</a>
 	  </p>
+	  <p style="text-align:center;color:white">
+      <a href="galeria/zdjecia.html	" target="_blank">Galeria</a>
+	  </p>
   </body>
 </html>
