--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
 	  <p style="text-align:center;color:white">
       <a href="galeria/zdjecia.html	" target="_blank">Galeria</a>
 	  </p>
+	  <p style="text-align:center;color:white">
+      <a href="film/film.html".html	" target="_blank">Film</a>
+	  </p>
   </body>
 </html>
