--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
 	  <p style="text-align:center;color:white">
       <a href="film/film.html".html	" target="_blank">Film</a>
 	  </p>
+	  <p style="text-align:center;color:white">
+      <a href="canvas/canvas.html".html	" target="_blank">canvas</a>
+	  </p>
   </body>
 </html>
