--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <a href="film/film.html".html	" target="_blank">Film</a>
 	  </p>
 	  <p style="text-align:center;color:white">
-      <a href="canvas/canvas.html".html	" target="_blank">canvas</a>
+      <a href="canvas/index2.html".html	" target="_blank">canvas</a>
 	  </p>
   </body>
 </html>
