--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 	  </p>
 	  <p style="text-align:center;color:white">
       <a href="canvas/index2.html".html	" target="_blank">canvas</a>
+	  </p
+		<hr>
+	   <p style="text-align:center;color:white">
+      <a href="kretek-zaliczenie/kretek-zaliczenie/glowna.html".html	" target="_blank">Strona Zaliczeniowa</a>
 	  </p>
   </body>
 </html>
