--- a/kretek-zaliczenie/kretek-zaliczenie/historia.html
+++ b/kretek-zaliczenie/kretek-zaliczenie/historia.html
@@ -12,7 +12,7 @@
       <div id="header">
         <div id="logo"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/POL_Krzanowice_COA.svg/1200px-POL_Krzanowice_COA.svg.png" /></div>
         <div id="tytul">
-          <h1>Historia Krzanowic</h1>
+          <h1>Historia</h1>
         </div>
       </div>
       <div id="middle">
